- new settings: "dropdown.closeOnSelect" - closes the dropdown after selecting an item, is "enabled" is "0" (which means always show dropdown) fixes #299
- refocus current Tagify input element after tag edit

- new method "editTagDone" - sets new tag value and exit the "edit mode"

- repositioning the dropdown suggestions list after tags have been added or removed (multi-line issues)

- allow removing tags while dropdown is shown

- fixed minor CSS but with editable tag not showing caret at the end (sometimes)

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -122,6 +122,9 @@
                     outline: none;
                     user-select: text;
                     cursor: text;
+                    // hack: sometimes the caret after the last character wasn't visible
+                    margin: -2px;
+                    padding: 2px;
                 }
               //  width          : 100%;
               // transition     : .1s;
